# off-chain-orderbook

./: .gitignore  README.md  dev.sh  info.txt  package.json
api-layer/: README.md  package.json  postman.json  tsconfig.json
api-layer/prisma/: schema.prisma  seed.ts
api-layer/src/: constants.ts  index.ts  server.ts
api-layer/src/controllers/: marketController.ts  userController.ts
api-layer/src/middleware/: authMiddleware.ts  errorHandler.ts  rate-limiter.ts  validator.ts
api-layer/src/routes/: marketRoutes.ts  userRoutes.ts
api-layer/src/schemas/: orderSchema.ts  userSchema.ts
api-layer/src/services/: marketService.ts  orderService.ts  redis.ts  redisService.ts  seedService.ts  tradeService.ts  userService.ts
api-layer/src/types/: index.ts
api-layer/src/workers/: dbWorker.ts
bots/: README.md  package.json
bots/src/: LiquidityProviderBot.ts  bots.config.ts  index.ts
bots/src/bots/: buyer-bot.ts  seller-bot.ts
rust_matching_engine/: Cargo.toml
rust_matching_engine/src/: consumer.rs  main.rs  matching_engine.rs  matching_engine_tests.rs
ui/: package.json
ui/docs/: blueprint.md
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/hooks/: useOrderBookSocket.ts  useTheme.ts
ui/src/lib/: schemas.ts
ui/src/types/: index.ts
web/: .env.example  package.json
web/public/: markets.json
web/src/: App.tsx  main.tsx
web/src/components/: BalancesTable.tsx  MarketSelector.tsx  OrderBookPanel.tsx  OrderBookTable.tsx  (+4 more)
websocket/: package.json  tsconfig.json
websocket/prevsrc/: server.ts
websocket/src/: index.ts  server.ts  types.ts
(+35 files in other folders)
