[package]
name = "rust_matching_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive","serde"] }
serde_json = "1.0"
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
uuid = {version = "1.17.0",features = ['v4']}
